--- a/index.html
+++ b/index.html
@@ -354,9 +354,9 @@
 
     // 合計金額の更新
     function updateTotal() {
-        totalPriceElement.textContent = `စုစုပေါင်း: ¥${toMyanmarNumber(totalAmount + additionalDonation)}`;
-        totalAmountElement.textContent = `လေလံစျေး: ¥${toMyanmarNumber(totalAmount)}`;
-        additionalDonationElement.textContent = `ထပ်တိုးအလှူငွေ: ¥${toMyanmarNumber(additionalDonation)}`;
+        totalPriceElement.textContent = `စုစုပေါင်း: ${toMyanmarNumber(totalAmount + additionalDonation)}ယမ်း`;
+        totalAmountElement.textContent = `လေလံစျေး: ${toMyanmarNumber(totalAmount)}ယမ်း`;
+        additionalDonationElement.textContent = `ထပ်တိုးအလှူငွေ: ${toMyanmarNumber(additionalDonation)}ယမ်း`;
     }
   </script>
 </body>
