--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
     <div class="auction-container">
       <img id="auctionImage" class="auction-image hidden" alt="Auction Item Image" />
       <div class="auction-details">
-        <p id="totalPrice">စုစုပေါင်း: ¥0</p>
-        <p id="totalAmount">လေလံစျေး: ¥0</p>
-        <p id="additionalDonation">ထပ်တိုးအလှူငွေ: ¥0</p>
+        <p id="totalPrice">စုစုပေါင်း: 0ယမ်း</p>
+        <p id="totalAmount">လေလံစျေး: 0ယမ်း</p>
+        <p id="additionalDonation">ထပ်တိုးအလှူငွေ: 0ယမ်း</p>
       </div>
     </div>
 
